--- a/exercice5/style.css
+++ b/exercice5/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 10px;
@@ -59,20 +63,19 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        height: 250px;
         background-color: #65D643;
         margin-right: 25px
     }
 
     /* J'ai bien vu le premier piège ;p */
     #tricky-one {
-        height: 250px;
-        width: 415px;
+        width: 515px;
         padding-right: 100px
     }
 
     /* Et j'ai bien vu le second :D */
     #tricky-two {
-        height: 225px;
         width: 500px;
         padding-top: 25px
     }
