--- a/exercice5/style.css
+++ b/exercice5/style.css
@@ -1,6 +1,4 @@
-* {
-    box-sizing: border-box;
-}
+* {box-sizing: border-box}
 
 body {
     margin: 0;
@@ -35,14 +33,14 @@ body {
     #second {
         display: flex;
         justify-content: space-between;
-        margin: 20px 0; 
+        margin: 20px 0
     }
 
     .orange {
         height: 200px;
         width: 500px;
         background-color: #f7b92b;
-        margin-right: 25px;
+        margin-right: 25px
     }
 /**************************************************
 ***************** SECOND SECTION ******************
@@ -55,7 +53,7 @@ body {
     #third {
         display: flex;
         justify-content: space-between;
-        margin: 20px 0; 
+        margin: 20px 0
     }
 
     .bg-green {
